[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/game/card/Card.gd" type="Script" id=1]
[ext_resource path="res://assets/cards/0.png" type="Texture" id=2]

[node name="CardBase" type="Control"]
margin_right = 250.0
margin_bottom = 350.0
rect_min_size = Vector2( 250, 350 )
rect_pivot_offset = Vector2( 125, 175 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Colour" type="ColorRect" parent="."]
margin_left = 9.0
margin_top = 9.0
margin_right = 192.0
margin_bottom = 307.0
color = Color( 1, 0.0470588, 0.0470588, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CardImage" type="TextureRect" parent="."]
margin_left = -109.602
margin_top = -26.8701
margin_right = 1296.4
margin_bottom = 1181.13
rect_scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Interact" type="TextureButton" parent="."]
visible = false
margin_left = -7.0
margin_top = 4.0
margin_right = 899.0
margin_bottom = 1212.0
rect_min_size = Vector2( 250, 350 )
expand = true
[connection signal="mouse_entered" from="Interact" to="." method="_on_Interact_mouse_entered"]
[connection signal="mouse_exited" from="Interact" to="." method="_on_Interact_mouse_exited"]
[connection signal="pressed" from="Interact" to="." method="_on_Interact_pressed"]
